force-app/main/default/objects/Car__c/fields/Body_Type__c.field-meta.xml
<CustomField>
    <fullName>Body_Type__c</fullName>
    <label>Body Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Body_type</valueSetName>
    </valueSet>
</CustomField>