force-app/main/default/objects/Car__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country of origin car</description>
    <label>Country</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>