force-app/main/default/objects/Car__c/fields/Engine_power__c.field-meta.xml
<CustomField>
    <fullName>Engine_power__c</fullName>
    <label>Engine power</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>