force-app/main/default/objects/Car__c/fields/mileage__c.field-meta.xml
<CustomField>
    <fullName>mileage__c</fullName>
    <label>mileage</label>
    <precision>16</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>