force-app/main/default/objects/Car__c/fields/Production_year__c.field-meta.xml
<CustomField>
    <fullName>Production_year__c</fullName>
    <label>Production year</label>
    <required>true</required>
    <type>Date</type>
</CustomField>