force-app/main/default/objects/Car__c/fields/Steering_wheel__c.field-meta.xml
<CustomField>
    <fullName>Steering_wheel__c</fullName>
    <label>Steering wheel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Steering_wheel</valueSetName>
    </valueSet>
</CustomField>